pretty much rebuilt entire toy app to serve up web page. included buildspec.yml and Dockerfile for convenience reasons.

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,7 @@ phases:
   build:
     commands:
       - cd ci-tester
-      - mvn clean package
+      - mvn clean && mvn package
   #post_build:
     #commands:
       # - command
