--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,30 +1,30 @@
 version: 0.2
 
-#env:
-  #variables:
-     # key: "value"
-     # key: "value"
-  #parameter-store:
-     # key: "value"
-     # key: "value"
-
+env:
+  variables:
+      IMAGE_REPO_NAME: "ci-tester"
+      IMAGE_TAG: "1.0.0"
+      AWS_DEFAULT_REGION: "YOUR_REGION"
+      AWS_ACCOUNT_ID: "YOUR_ACCOUNT_ID"
 phases:
-  #install:
-    #commands:
-      # - command
-      # - command
-  #pre_build:
-    #commands:
-      # - command
-      # - command
+  pre_build:
+    commands:
+      - echo Logging in to Amazon ECR...
+      - $(aws ecr get-login --region $AWS_DEFAULT_REGION)
   build:
     commands:
+      - echo Build started on `date`
+      - echo Building the War File
       - cd ci-tester
       - mvn clean && mvn package
-  #post_build:
-    #commands:
-      # - command
-      # - command
+      - echo Building the Docker Image...
+      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGAION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+  post_build:
+    commands:
+      - echo Build Completed on `date`
+      - echo Pushing the Docker image...
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
 artifacts:
   files:
     - ci-tester-0.1.0.war
