updated buildspec.yml to push to ecr as needed, rough draft.

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,8 +9,11 @@ env:
 phases:
   pre_build:
     commands:
+      - echo Staring Docker Daemon
+      - service docker start
+      - sleep 1
       - echo Logging in to Amazon ECR...
-      - $(aws ecr get-login --region $AWS_DEFAULT_REGION)
+      - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
   build:
     commands:
       - echo Build started on `date`
